policies/grafana-enforce-folder-for-dashboard/tests/overlays/test01/generated/admissionregistration.k8s.io_v1beta1_validatingadmissionpolicybinding_vaplibtest-grafana-enforce-folder-for-dashboard-test01.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: vaplibtest-grafana-enforce-folder-for-dashboard-test01
  namespace: vaplibtest-grafana-enforce-folder-for-dashboard-test01
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vaplib-grafana-enforce-folder-for-dashboard: deny
    objectSelector: {}
  policyName: vaplib-grafana-enforce-folder-for-dashboard
  validationActions:
  - Deny
