policies/grafana-enforce-folder-for-dashboard/tests/overlays/test01/generated/v1_configmap_vaplibtest-grafana-enforce-folder-for-dashboard-test01.yaml
apiVersion: v1
data:
  test: test
kind: ConfigMap
metadata:
  annotations:
    grafana_folder: vaplibtest-grafana-enforce-folder-for-dashboard-test01
  labels:
    grafana_dashboard: "1"
  name: vaplibtest-grafana-enforce-folder-for-dashboard-test01
  namespace: vaplibtest-grafana-enforce-folder-for-dashboard-test01
